--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,28 @@
-arabic-reshaper==3.0.0
 asgiref==3.8.1
-asn1crypto==1.5.1
 backports.zoneinfo==0.2.1
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-cryptography==43.0.3
-cssselect2==0.7.0
+catboost==1.2.7
+contourpy==1.1.1
+cycler==0.12.1
 Django==4.2.16
-html5lib==1.1
-idna==3.10
-lxml==5.3.0
-oscrypto==1.3.0
+fonttools==4.55.3
+graphviz==0.20.3
+importlib-resources==6.4.5
+joblib==1.4.2
+kiwisolver==1.4.7
+matplotlib==3.7.5
+numpy==1.24.4
+packaging==24.2
+pandas==2.0.3
 pillow==10.4.0
-pycparser==2.22
-pyHanko==0.25.3
-pyhanko-certvalidator==0.26.5
-pypdf==5.1.0
-pypng==0.20220715.0
-python-bidi==0.6.3
-PyYAML==6.0.2
-qrcode==7.4.2
-reportlab==4.2.5
-requests==2.32.3
-six==1.16.0
-sqlparse==0.5.2
-svglib==1.5.1
-tinycss2==1.4.0
+plotly==5.24.1
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+scipy==1.10.1
+six==1.17.0
+sqlparse==0.5.1
+tenacity==9.0.0
 typing-extensions==4.12.2
 tzdata==2024.2
-tzlocal==5.2
-uritools==4.0.3
-urllib3==2.2.3
-webencodings==0.5.1
-xhtml2pdf==0.2.16
+xgboost==2.1.3
+zipp==3.20.2
