--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ catboost==1.2.7
 contourpy==1.1.1
 cycler==0.12.1
 Django==4.2.16
+djangorestframework==3.15.2
 fonttools==4.55.3
 graphviz==0.20.3
 importlib-resources==6.4.5
